--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,4 @@
-/**
-  
-* Template Name: Runaway - Personal Portfolio HTML Template
-* Version 2.3.4
-* Author: themetrading
-* Email: themetrading@gmail.com
-* Developed By: themetrading
-* First Release: 08 February 2019
-* Last Update : 19 July 2020
-* Author URL: www.themetrading.com
 
-**/
-
-/*===================================================================================
-Table of CSS Content arrage with every section name
-=====================================================================================
-
-01.   Default Css
-02.   Default Margin and Padding
-03.   Overlay Css
-04.   Socal Media
-05.   Massage Box
-06.	  Main Title
-07.   background Image
-08.   Nav Menu Css
-09.   Side Nav menu
-10.   Main banner
-11.   Slider 
-12.	  About
-13.	  Video Popup 
-14.	  Progress Bar and Fact Counter
-15.   Services One
-16.   Services Two
-17.	  Portfolio
-18.   Pricing
-19.   Team
-20.	  Testimonial
-21.   Blog
-22.   Contact
-23.   Preloader 
-24.   Back to Top
-25.   Page Banner
-26.   Page Nav
-27.   Blog Sidebar
-28.   Blog Details
-29.   Template Default Animation Css
-30.   Color Settings
-31.   Responsive Media Queries Css
-/*===================================================================================
-	Typography links 
- 	Import Google Fonts
-=====================================================================================*/
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i|Poppins:400,400i,600,600i,700,700i,800,800i");
 
 /*===================================================================================
@@ -332,6 +281,13 @@ a.active {
   height: 100%;
   display: block;
 }
+.row .abimgi{
+  padding-top: 30px;
+}
+.overlay_one .abimg {
+  border: 20px solid #00a1f2;
+  border-radius: 10px;
+}
 
 /*=======================================================================
 04.   Socal Media
@@ -552,7 +508,21 @@ a.active {
 .navbar {
   padding: 0px;
 }
+.sidebar .nav-logo {
+  width: 60px;
+  height: auto;
+  display: block;
+  /* margin: 5px 0px 5px 10px; */
+}
 
+@media only screen and (max-width: 600px) {
+  .sidebar .nav-logo {
+    width: 40px;
+    height: auto;
+    display: block;
+    /* margin: 5px 0px 5px 10px; */
+  }
+}
 .box-layout .main_nav {
   width: 1280px;
   display: inline-block;
@@ -641,7 +611,7 @@ header {
   left: 0;
   height: 100%;
   z-index: 100;
-  padding: 30px 20px;
+  padding: 40px 30px;
 }
 
 .sidenav {
@@ -655,7 +625,9 @@ header {
   transition: 0.5s;
   padding-top: 60px;
 }
-
+.sidebar .logo img {
+  margin-bottom: 10px;
+}
 .sidenav a {
   text-decoration: none;
   font-size: 14px;
@@ -679,9 +651,7 @@ ul#menu li a {
   text-align: center;
 }
 
-.sidebar img {
-  margin-bottom: 60px;
-}
+
 
 #mysidenav img {
   width: 50px;
@@ -2580,11 +2550,6 @@ label.radios {
   .footer_bottom {
     margin-left: 30px;
   }
-.footer{
-  background-color: #000;
-  width: 20px;
-  margin-top: 98%;
-}
   .hover_overlay .border h4 {
     margin-top: 15px;
     font-size: 24px;
@@ -3540,3 +3505,48 @@ a[data-toggle="collapse"] {
   border-bottom: 0;
   border-left: .3em solid transparent;
 }
+
+
+.company .row {
+  padding: 20px;
+  border-bottom: 1px solid rgba(232, 238, 238, 0.808);
+}
+
+.company .row .eduimg {
+  height: 60%;
+  width: 60%;
+  /* margin-top: 15%; */
+}
+
+.company .row .eduimg {
+  width: 200px;
+  float: right;
+  /* margin-top: 15%; */
+}
+
+.company .row .aiub,
+.nbl {
+  text-align:right;
+}
+
+.company .row  h1 {
+  font-size: 25px;
+}
+.company .row .aiubimg {
+  float: left;
+  /* margin-top: 15%; */
+}
+
+/* Footer */
+/* #contact .container {
+  min-height: 100%;
+  position: relative;
+}
+.footer {
+  position: absolute;
+  background-color: white;
+  color: #00a1f2;
+  bottom: 0;
+  width: 100%;
+  height: 15px;
+} */
