--- a/css/color.css
+++ b/css/color.css
@@ -1,7 +1,7 @@
 /*	Color
 =====================================================================*/
 .color_default {
-	color: #ffb32f;
+	color: #14cbd1;
 }
 
 .color_primary {
@@ -31,7 +31,7 @@
 }
 
 .bg_primary {
-	background-color: #1e283c;
+	background-color: #1c1d1f;
 }
 
 .bg_secondery {
@@ -55,13 +55,13 @@
 }
 
 .bg_white {
-	background-color: #fff;
+	background-color: rgb(255, 255, 255);
 }
 
 /*	btn color
 ===================================================================*/
 .btn-default {
-	background-color: #ffb32f;
+	background-color: #14cbd1;
 	color: #fff;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .btn_info {
-	color: #ffb32f;
+	color: #14cbd1;
 }
 
 .btn_info:hover {
@@ -104,7 +104,7 @@
 .navbar-nav .nav-item .nav-link:before,
 .dropdown-item:focus,
 .dropdown-item:hover {
-	background-color: #ffb32f;
+	background-color: #14cbd1;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -123,7 +123,7 @@
 ul#menu li.active a,
 .contact_massage a,
 .navbar-light .navbar-nav .nav-link:focus {
-	color: #ffb32f;
+	color: #14cbd1;
 }
 
 .nav-scroll .navbar-light .navbar-nav .nav-link {
@@ -150,7 +150,7 @@ ul#menu li.active a,
 }
 
 .white_hover a i:hover {
-	color: #ffb32f;
+	color: #14cbd1;
 }
 
 /*	Default Color Class & ID
@@ -168,7 +168,7 @@ ul#menu li a:hover,
 .white_link a:hover,
 .recent_post a:hover,
 .archives ul li a:hover {
-	color: #ffb32f;
+	color: #14cbd1;
 }
 
 /*	Primary Color Class & ID
@@ -231,7 +231,7 @@ ul#menu li a:hover,
 .page-item.active .page-link,
 .page-link:hover,
 .tags ul li a:hover {
-	background-color: #ffb32f !important;
+	background-color: #14cbd1 !important;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -275,7 +275,7 @@ ul#menu li a:hover,
 /*	Border Color Default
 ===================================================================*/
 .overlay-box {
-	border-color: #ffb32f;
+	border-color: #14cbd1;
 }
 
 /*	Border Color Primary
@@ -324,7 +324,7 @@ ul#menu li a:hover,
 }
 
 .border {
-	border-color: #ffb32f !important;
+	border-color: #14cbd1 !important;
 }
 
 .form-control:focus {
