--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ a.active {
 }
 
 .background1 {
-  background-image: url(../images/slider/03.jpg);
+  background-image: url(images/slider/03.jpg);
 }
 
 .background2 {
