--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ a.active {
 }
 
 .background13 {
-  background-image: url(../images/slider/10.jpg);
+  background-image: url(/images/slider/10.JPG);
 }
 
 .background14 {
